--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,12 @@
+{% extends 'base.html.twig' %}
 {% block body %}
 
-    <h3>My Symfony 4 sample project</h3>
+    <div class="text-center">
+        <h3>My Symfony 4 sample project</h3>
+
+        <div class="jumbotron text-center">
+            <example></example>
+        </div>
+    </div>
 
 {% endblock %}
