--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,7 +5,8 @@
         <h3>My Symfony 4 sample project</h3>
 
         <div class="jumbotron text-center">
-            <example></example>
+           <!-- <example></example>-->
+            <login></login>
         </div>
     </div>
 
