--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('fos_user_security_login') }}">login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('fos_user_security_logout') }}">Logout</a>
+                </li>
             </ul>
         </div>
     </div>
